# Wall-E

./: .env.example  .gitignore  ITERATION.md  README.md  docker-compose.yml  requirements.txt
.github/workflows/: release.yml
agents/go-build-agent/: go.mod  main.go
agents/ts-web-agent/: package.json
agents/ts-web-agent/src/: agent.ts
apps/desktop/: package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
brain/: agent.py  project_context.py  server.py
brain/prompts/: system_prompt.py
brain/sub_agents/: remote_agents.py
brain/tools/: code_tools.py  git_tools.py  shell_tools.py
docs/: PACKAGING.md  brain-api.md
interface/: app.js  index.html  styles.css
