[package]
name = "wall-e-desktop"
version = "0.1.0"
description = "Native desktop shell for Wall-E"
authors = ["Socrates Oteo"]
edition = "2021"

[lib]
name = "wall_e_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wall-e-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
